--- a/web/src/main/webapp/WEB-INF/templates/customerDetail.html
+++ b/web/src/main/webapp/WEB-INF/templates/customerDetail.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
    <!--  <link rel="stylesheet" href="<c:url value='/assets/css/new_style.css' />"> -->
     <link rel="stylesheet" type="text/css" href="resources/css/new_style.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/customerDetail.css">
     <link rel="stylesheet" type="text/css" href="resources/app-assets/css/components_new.min.css">
     
     <!-- PHẦN CHỈNH SỬA KHI HỆ THỐNG ASSETS TRÊN INTERNET BỊ LỖI -->
@@ -913,172 +914,6 @@
             </div>
         </div>
 
-        <style>
-            body {
-                font-family: Arial, sans-serif;
-            }
-
-            .container {
-                display: flex;
-            }
-
-            .left-panel {
-                width: 30%;
-                padding: 20px;
-                background-color: #f5f5f5;
-            }
-
-            .right-panel {
-                width: 70%;
-                padding: 20px;
-                background-color: #ffffff;
-            }
-
-            .user-info {
-                display: flex;
-                align-items: center;
-            }
-
-            .user-avatar {
-                width: 80px;
-                height: 80px;
-                border-radius: 50%;
-                background-color: #cccccc;
-                margin-right: 10px;
-            }
-            
-            .user-avatar img {
-   				width: 80px; 
-			    height: 80px;
-			    border-radius: 50%; 
-			    object-fit: cover; 
-			}
-
-            .user-details h2 {
-                margin: 0;
-                font-size: 24px;
-                color: #5d5d5d;
-            }
-
-            .user-details p {
-                margin: 2px 0;
-                font-size: 14px;
-                color: #5d5d5d;
-            }
-
-            .actions {
-                margin-top: 20px;
-            }
-
-            .actions button {
-                background-color: #007bff;
-                color: white;
-                border: none;
-                padding: 10px 20px;
-                margin-right: 10px;
-                border-radius: 5px;
-            }
-
-            .relationship-section select{
-            	background-color: #007bff;
-				color: white; 
-				border: none; 
-				padding: 10px 20px; 
-				border-radius: 5px; 
-				cursor: pointer;
-				margin-top: 20px;
-            }
-            
-            .relationship-section label{
-            	font-weight: bold;
-            }
-            
-            .person-in-charge {
- 				margin-top:20px; 
-            }   
-            
-            .person-in-charge select{
- 				margin-top:5px;
- 				background-color: #007bff;
-				color: white; 
-				border: none; 
-				padding: 10px 20px; 
-				border-radius: 5px; 
-				cursor: pointer;  
-            }   
-            
-            .label-bold {
-    			font-weight: bold;
-			}
-			
-            .creation-info {
-                margin-top: 20px;
-            }
-
-            .comments-section {
-                margin-top: 30px;
-                border-top: 1px solid #ccc;
-            }
-
-            .comment {
-                display: flex;
-                align-items: center;
-                margin-top: 10px;
-            }
-
-            .comment-avatar {
-                width: 40px;
-                height: 40px;
-                border-radius: 50%;
-                background-color: #ccc;
-                margin-right: 10px;
-            }
-            
-            .comment-avatar img {
-			    width: 40x;
-			    height: 40px;
-			    border-radius: 50%;
-			    object-fit: cover;
-			}
-
-            .comment-body {
-                background-color: #f9f9f9;
-                padding: 10px;
-                border-radius: 5px;
-                width: 100%;
-            }
-
-            .comment-header {
-                font-weight: bold;
-            }
-
-            .comment-time {
-                font-size: 0.8em;
-                color: #999;
-            }
-
-            .comment-input {
-                margin-top: 20px;
-            }
-
-            .comment-input textarea {
-                width: 100%;
-                height: 100px;
-                padding: 10px;
-                font-size: 14px;
-            }
-
-            .comment-input button {
-                margin-top: 10px;
-                padding: 10px 20px;
-                font-size: 14px;
-                background-color: #28a745;
-                color: white;
-                border: none;
-                border-radius: 5px;
-                float: right;
-            }
-        </style>
 
         <div class="container">
             <!-- Left panel -->
