--- a/web/src/main/webapp/WEB-INF/templates/customerListCRMScreen.html
+++ b/web/src/main/webapp/WEB-INF/templates/customerListCRMScreen.html
@@ -30,6 +30,9 @@
 	href="https://cdn.jsdelivr.net/npm/jquery-resizable-columns@0.2.3/dist/jquery.resizableColumns.min.css">
 <link rel="stylesheet"
 	href="https://cdn.jsdelivr.net/npm/bootstrap-table@1.23.4/dist/bootstrap-table.min.css">
+	
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-table@1.23.4/dist/extensions/fixed-columns/bootstrap-table-fixed-columns.min.css">
+
 
 <!--  <link rel="stylesheet" href="<c:url value='/assets/css/new_style.css' />"> -->
 <link rel="stylesheet" type="text/css"
@@ -1784,6 +1787,7 @@
 		src="resources/app-assets/js/update/navigate.js"></script>
 	<script type="text/javascript"
 		src="resources/app-assets/js/update/customerList_JS.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap-table@1.23.5/dist/extensions/fixed-columns/bootstrap-table-fixed-columns.min.js"></script>
 	
 
 	<!-- BEGIN VENDOR JS-->
