--- a/web/src/main/webapp/WEB-INF/templates/homeCRMScreen.html
+++ b/web/src/main/webapp/WEB-INF/templates/homeCRMScreen.html
@@ -1384,15 +1384,15 @@
 
 											<!-- BEGIN BẢNG DANH SÁCH KHÁCH HÀNG VÀ BỘ LỌC -->
 											<div class="container-flex">
-												<div class="filter-container">
+												<!-- <div class="filter-container">
 													<button id="filter-toggle">
 														<i class="fa-solid fa-filter"></i>
 													</button>
 
-													<!-- Khung lọc liên hệ theo, ban đầu ẩn -->
+													Khung lọc liên hệ theo, ban đầu ẩn
 													<div id="filter-box" class="filter-hidden">
 														
-														<!-- <input type="text" placeholder="Tìm kiếm..."> -->
+														<input type="text" placeholder="Tìm kiếm...">
 														<form>
 															<label> <input type="checkbox"
 																id="filter-option-1">
@@ -1457,8 +1457,11 @@
 														
 														</form>
 													</div>
+												</div> -->
+												
+												<div class="content">
+													<h1>HOME PAGE</h1>
 												</div>
-
 												<!-- BEGIN TABLE CUSTOMER LIST -->
 												
 												<!-- END TABLE CUSTOMER LIST -->
