update view of menu-content(submenu of customer)

--- a/web/src/main/webapp/WEB-INF/templates/customerListCRMScreen.html
+++ b/web/src/main/webapp/WEB-INF/templates/customerListCRMScreen.html
@@ -490,8 +490,8 @@
 						class="menu-title" data-i18n="nav.dash.main">Trang chủ</span></a></li>
 
 				<li class="nav-item123 has-sub"
-					data-page="crm-web/customerListCRMScreen"><a class="menu-item"
-					href="/crm-web/customerListCRMScreen"><i
+					data-page="crm-web/customer"><a class="menu-item"
+					href="/crm-web/customer"><i
 						class="fa-solid fa-users"></i><span class="menu-title"
 						data-i18n="nav.templates.main">Khách hàng</span></a>
 					<ul class="menu-content123" style="">
