--- a/web/src/main/webapp/WEB-INF/templates/homeCRMScreen.html
+++ b/web/src/main/webapp/WEB-INF/templates/homeCRMScreen.html
@@ -30,6 +30,9 @@
 	href="https://cdn.jsdelivr.net/npm/jquery-resizable-columns@0.2.3/dist/jquery.resizableColumns.min.css">
 <link rel="stylesheet"
 	href="https://cdn.jsdelivr.net/npm/bootstrap-table@1.23.4/dist/bootstrap-table.min.css">
+	
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-table@1.23.4/dist/extensions/fixed-columns/bootstrap-table-fixed-columns.min.css">
+
 
 <!--  <link rel="stylesheet" href="<c:url value='/assets/css/new_style.css' />"> -->
 <link rel="stylesheet" type="text/css"
@@ -488,8 +491,8 @@
 						class="menu-title" data-i18n="nav.dash.main">Trang chủ</span></a></li>
 
 				<li class="nav-item123 has-sub"
-					data-page="crm-web/customerListCRMScreen"><a class="menu-item"
-					href="/crm-web/customerListCRMScreen"><i
+					data-page="crm-web/customer"><a class="menu-item"
+					href="/crm-web/customer"><i
 						class="fa-solid fa-users"></i><span class="menu-title"
 						data-i18n="nav.templates.main">Khách hàng</span></a>
 					<ul class="menu-content123" style="">
@@ -1540,4 +1543,4 @@
 	<!-- END PAGE LEVEL JS-->
 
 </body>
-</html>x
+</html>
