--- a/web/src/main/webapp/WEB-INF/templates/kpiCRMScreen.html
+++ b/web/src/main/webapp/WEB-INF/templates/kpiCRMScreen.html
@@ -365,9 +365,21 @@
            
           </li>
           
-          <li class="nav-item123 has-sub" data-page="crm-web/customerListCRMScreen"><a class="menu-item" href="/crm-web/customerListCRMScreen"><i class="fa-solid fa-users"></i><span class="menu-title" data-i18n="nav.templates.main">Khách hàng</span></a>
-           
-          </li>
+        	<li class="nav-item123 has-sub"
+					data-page="crm-web/customer"><a class="menu-item"
+					href="/crm-web/customer"><i
+						class="fa-solid fa-users"></i><span class="menu-title"
+						data-i18n="nav.templates.main">Khách hàng</span></a>
+					<ul class="menu-content123" style="">
+						<li class="has-sub"><a class="menu-item" href="#"
+							data-i18n="nav.page_layouts.main">Danh sách khách hàng</a></li>
+						<li class="has-sub"><a class="menu-item" href="#"
+							data-i18n="nav.navbars.main">Hành trình khách hàng</a></li>
+						<li class="has-sub"><a class="menu-item" href="#"
+							data-i18n="nav.vertical_nav.main">Tỷ lệ chuyển đổi</a></li>
+
+					</ul>
+			</li>
           
           <li class="nav-item123 has-sub" data-page="crm-web/kpiCRMScreen"><a href="/crm-web/kpiCRMScreen"><i class="fas fa-business-time"></i><span class="menu-title" data-i18n="nav.layouts.temp">KPI</span></a>
             <ul class="menu-content" style="">
